third_party/move/move-compiler-v2/tests/more-v1/locals/assign_resource.exp

Diagnostics:
warning: This assignment/binding to the left-hand-side variable `r` is unused. Consider removing this assignment/binding, or prefixing the left-hand-side variable with an underscore (e.g., `_r`), or renaming to `_`
  ┌─ tests/more-v1/locals/assign_resource.move:5:17
  │
5 │         let r = R{};
  │                 ^^^

warning: This assignment/binding to the left-hand-side variable `r` is unused. Consider removing this assignment/binding, or prefixing the left-hand-side variable with an underscore (e.g., `_r`), or renaming to `_`
   ┌─ tests/more-v1/locals/assign_resource.move:29:17
   │
29 │         let r = R{};
   │                 ^^^

warning: Unused value of parameter `x`. Consider removing the parameter, or prefixing with an underscore (e.g., `_x`), or binding to `_`
   ┌─ tests/more-v1/locals/assign_resource.move:33:15
   │
33 │     fun t5<T>(x: T, y: T): T {
   │               ^


Diagnostics:
error: local `r` of type `R` does not have the `drop` ability
  ┌─ tests/more-v1/locals/assign_resource.move:5:17
  │
5 │         let r = R{};
  │                 ^^^ implicitly dropped here since it is no longer used

error: local `r` of type `R` does not have the `drop` ability
   ┌─ tests/more-v1/locals/assign_resource.move:12:19
   │
12 │         if (cond) { r = R{}; };
   │                   ^^^^^^^^^^^^ implicitly dropped here since it is no longer used

error: local `r` of type `R` does not have the `drop` ability
   ┌─ tests/more-v1/locals/assign_resource.move:18:27
   │
18 │         if (cond) {} else { r = R{}; };
   │                           ^^^^^^^^^^^^ implicitly dropped here since it is no longer used

error: local `r` of type `R` does not have the `drop` ability
   ┌─ tests/more-v1/locals/assign_resource.move:24:24
   │
24 │         while (cond) { r = R{} };
   │                        ^^^^^^^ implicitly dropped here since it is no longer used
